--- a/index.html
+++ b/index.html
@@ -8,6 +8,5 @@
 </head>
 <body>
     <h1>Welcome to my Website</h1>
-         <h5>welcome to my Website were you belong!</h5>
-</body>
+       <body>
 </html>
