--- a/OPT-VERIFY.HTML
+++ b/OPT-VERIFY.HTML
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="opt-card">
+        <h1>OPT VERIFY</h1>
+        <p>Code has benn sebt to your number</p>
+        <div class="OPT-CARD-INPUT">
+            <input type="text" maxlength="1" autofocus>
+            <input type="text" maxlength="1">
+            <input type="text" maxlength="1">
+            <input type="text" maxlength="1">
+            <input type="text" maxlength="1">
+            <p>did not get the code click here to resend it<a href="#">resend</a></p>
+            <button disabled>Verify</button>
+        </div>
+    </div>
 </body>
 </html>
